bestpractice/force-app/main/default/objects/CFG_Run_Logic__c/CFG_Run_Logic__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting will determine if Trigger,Validation rule or process builder should run or not</description>
    <label>CFG Run Logic</label>
</CustomObject>