bestpractice/force-app/main/default/objects/CFG_Run_Logic__c/fields/BypassProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>BypassProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Need to be checked if we want to escape process builder</description>
    <label>BypassProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>