bestpractice/force-app/main/default/objects/CFG_Run_Logic__c/fields/BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>BypassTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked triggers need to be bypassed</description>
    <label>BypassTrigger</label>
    <type>Checkbox</type>
</CustomField>