bestpractice/force-app/main/default/objects/CFG_Run_Logic__c/fields/BypassValidationRule__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Need to be checked if we want to by pass validation rule</description>
    <label>BypassValidationRule</label>
    <type>Checkbox</type>
</CustomField>